# pix2asa

./: .gitignore  INSTALL.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
configs/: 515-fo.cfg  PIX-525-fake-FO.txt  PIX501conf2003Aug13.txt  PIX501conf2003Sep24.txt  conduit.txt  perimeter-1.cfg  pix-535_with_trunk.cfg  pix38.txt  pix535.txt  system.cfg
docs/: DYN-PAT_part3.md  NAT.md  NAT_part1.md
pix2asa/: __init__.py  __main__.py  api.py  cli.py  client.py  context.py  converter.py  engine.py  models.py  rendering.py
pix2asa/actions/: __init__.py  conduit.py  failover.py  inspect.py  interfaces.py  misc.py  names.py  nat.py  nat_emit.py  rules.py
pix2asa/data/: devices.json
pix2asa/templates/: allocate_interface.j2  asa5505_switch.j2  asdm_history.j2  asdm_location.j2  asdm_logging.j2  auto_object.j2  conduit_unsupported.j2  dynamic_nat.j2  failover_lan_interface.j2  failover_lan_rename.j2  failover_link_rename.j2  failover_poll.j2  failover_warning.j2  hostname.j2  inspect_stanza.j2  interface_rename.j2  interface_stanza.j2  name_object.j2  nat_exempt.j2  nat_pool_group.j2  passthrough.j2  port_redirect_nat.j2  security_warning.j2  static_nat.j2  sysopt_ipsec.j2  unsupported.j2  version_header.j2  vlan_interface.j2
tests/: conftest.py  test_actions.py  test_api.py  test_cli.py  test_client.py  test_context.py  test_converter.py  test_engine.py  test_frontend.py  test_models.py
ui/: index.html  package-lock.json  package.json  tailwind.config.js
ui/src/: App.jsx  api.js
ui/src/components/: ConfigInput.jsx  (+7 more)
(+1 files in other folders)
