[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pix2asa"
version = "1.0.0"
description = "Cisco PIX to ASA configuration migration tool"
license = "MIT"
authors = [{ name = "Per Hagen", email = "21000509+perhagen@users.noreply.github.com" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "jinja2>=3.0",
]

[project.scripts]
pix2asa = "pix2asa.cli:main"
pix2asa-client = "pix2asa.client:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "httpx>=0.27",   # for FastAPI test client
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "integration: tests that use real sample config files from configs/",
]

[tool.hatch.build.targets.wheel]
packages = ["pix2asa"]
